<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="about_copyright">2016 Tele2 Russia</string>
    <string name="about_date">28.10.2016</string>
    <string name="about_link_info">Contact us: russia.vopros@tele2.ru</string>
    <string name="about_link_support">Technical support: telegram.me/Tele2_support</string>
    <string name="about_link_web">www.tele2.ru</string>
    <string name="about_thanks" />
    <string name="action_change_pin">com.mavenir.optus.action.changePIN</string>
    <string name="actionbar_tab_call_log" />
    <string name="actionbar_tab_contacts" />
    <string name="actionbar_tab_messages" />
    <string name="activation_account_not_valid_message">Account is not set, set up an account manually?</string>
    <string name="activation_account_not_valid_title">Account not set</string>
    <string name="activation_account_number">Your number is: %1$s</string>
    <string name="activation_account_number_pin">Your number is: %1$s\10Your PIN is: %2$s\10\10IMPORTANT: Write down PIN!</string>
    <string name="activation_auto">Use my mobile number</string>
    <string name="activation_choice_exit">Exit</string>
    <string name="activation_choice_give">Give me number</string>
    <string name="activation_choice_help">Help</string>
    <string name="activation_choice_use">Use my mobile number</string>
    <string name="activation_configuration_failed">Configuration failed</string>
    <string name="activation_configuration_success">Configuration successful</string>
    <string name="activation_configuration_waiting_wifi">Waiting for wifi connection…</string>
    <string name="activation_deactivated_message">Account has been deactivated.</string>
    <string name="activation_deactivated_title">Deactivated</string>
    <string name="activation_disable_airplane_mode_message">Activation must go through mobile data connection. You must disable airplane mode.</string>
    <string name="activation_disable_airplane_mode_title">Disable airplane mode</string>
    <string name="activation_disable_wifi_message">Provisioning must go through mobile data connection. You must disable Wi-Fi first.</string>
    <string name="activation_disable_wifi_title">Disable WiFi</string>
    <string name="activation_enable_mobile_data_failed">Failed to open settings, you need to do it manually.</string>
    <string name="activation_enable_mobile_data_message">Provisioning must go through mobile data connection. You must enable mobile data.</string>
    <string name="activation_enable_mobile_data_title">Enable mobile data</string>
    <string name="activation_enable_wifi_message">Do you want to turn on WiFi now to enable provisioning?</string>
    <string name="activation_enable_wifi_title">Enable WiFi</string>
    <string name="activation_enter_engineering_code">Enter code</string>
    <string name="activation_enter_number_message">Please input your mobile phone number</string>
    <string name="activation_enter_number_title">Input number</string>
    <string name="activation_enter_pin_message">%1$s requires PIN to activate:</string>
    <string name="activation_error_hint">* validation error</string>
    <string name="activation_error_number_empty">* please input the number</string>
    <string name="activation_error_pin_empty">* please input PIN</string>
    <string name="activation_eula_title">End User Licence Agreement</string>
    <string name="activation_exception_blocked">Sorry, your phone isn\'t currently compatible with this service. You may be able to use it if you upgrade your phone\'s software.&lt;br/&gt;&lt;br/&gt;Find out more about phone and software compatibility at\10%s</string>
    <string name="activation_exception_busy">Sorry, we can\'t register you right now. This is a temporary issue, so please try again in a few minutes.</string>
    <string name="activation_exception_http_error">Sorry, we can\'t register you right now. This is a temporary issue, so please try again in a few minutes.</string>
    <string name="activation_exception_imsi_mismatch">We can\'t seem to match up your account details. Please call us and we\'ll look into it for you.</string>
    <string name="activation_exception_invalid_request">Provisioning failed.</string>
    <string name="activation_exception_lte_a">Sorry, there\'s been a problem. Please try again later.</string>
    <string name="activation_exception_lte_b">Sorry, the capability to make calls over 4G has been disabled.</string>
    <string name="activation_exception_lte_deactivation">Sorry, there\'s been a problem. Please try again later.</string>
    <string name="activation_exception_lte_no_connection">Sorry, you need to be connected to either mobile network or a Wi-Fi network to activate Use over 4G.</string>
    <string name="activation_exception_lte_success">Please restart your phone to complete the activation process</string>
    <string name="activation_exception_lte_timeout">Sorry, the Use over 4G service has timed out. It will automatically turn back on as soon as you have a Wi-Fi or mobile connection.</string>
    <string name="activation_exception_lte_unkown">Unknown error.</string>
    <string name="activation_exception_no_connection">There is no valid connection.</string>
    <string name="activation_exception_no_record">We can\'t seem to match up your account details. Please call us and we\'ll look into it for you.</string>
    <string name="activation_exception_no_response">Sorry, we can\'t register you right now. You may not be connected to our data network. Please move somewhere where you have a better signal and try again. Otherwise, please try again in a few minutes.</string>
    <string name="activation_exception_ocsp_error">We are having trouble with getting service configuration data. Please call us and quote error code [000x], and we\'ll look into it for you.</string>
    <string name="activation_exception_ocsp_no_resp_not_reach">Your Wi-Fi network doesn\'t seem to be working.\10\10Please make sure your Wi-Fi connection is turned on, that you\'re connected to it and, if necessary, signed in, then try again.</string>
    <string name="activation_exception_ocsp_no_resp_reach">You\'re trying to connect over a blocked Wi-Fi connection.\10\10Please remove this Wi-Fi network from your Hotspots and connect to a different Wi-Fi network.</string>
    <string name="activation_exception_ok">Provisioning successful</string>
    <string name="activation_exception_parsing_failed">Provisioning failed.</string>
    <string name="activation_exception_time_difference">Sorry, the time and/or date on your device appears to be wrong. Please adjust in order to use App over 4G.</string>
    <string name="activation_exception_tls_error">We are having trouble registering you for this service. Please call us and quote error code [0001], and we\'ll look into it for you.</string>
    <string name="activation_exception_unavailable">Sorry, your phone isn\'t currently compatible with this service. You may be able to use it if you upgrade your phone\'s software.&lt;br/&gt;&lt;br/&gt;Find out more about phone and software compatibility at\10%s</string>
    <string name="activation_exception_user_error">There has been a problem activating the use of the App over 4G.</string>
    <string name="activation_initial_activate_button">Activate</string>
    <string name="activation_initial_activate_old_button">Activate (old)</string>
    <string name="activation_initial_emergency">I accept that calls to Emergency numbers (999 and 112) will not be made over Wi-Fi and will always be made using the mobile network</string>
    <string name="activation_initial_emergency_accept">You must accept routing policy to activate</string>
    <string name="activation_initial_eula">I accept the terms of the End User Licence Agreement</string>
    <string name="activation_initial_eula_accept">You must accept EULA to activate</string>
    <string name="activation_initial_moto">Calls and messages over wifi, from wherever you are.</string>
    <string name="activation_initial_reactivate_button">Reactivate</string>
    <string name="activation_initial_retry_button">Retry</string>
    <string name="activation_initial_terms">I accept the End User Licence Agreement and the Terms and Conditions of using this application. I also accept that the emergency calls (112, etc.) are not carried out via WiFi, but carried over the mobile network, previously set call forwarding, voice mail and service Who Called will be disabled when you activate the service.</string>
    <string name="activation_initial_terms_accept">You must accept Terms and Conditions to activate</string>
    <string name="activation_initial_upload_info">I accept that the application will automatically upload information about application errors</string>
    <string name="activation_initial_warning">You must be on Tele2 Moscow mobile network to activate this application</string>
    <string name="activation_progress_activating">Activating…</string>
    <string name="call_details_duration_hint">00:00:00</string>
    <string name="call_details_time_hint">00:00</string>
    <string name="call_log_radio_all">ALL</string>
    <string name="call_log_radio_missed">MISSED</string>
    <string name="cd_activation_engmode" />
    <string name="cd_activation_logo">Company logo</string>
    <string name="cd_call_details_play">Play recording</string>
    <string name="cd_call_log_all_calls">All calls</string>
    <string name="cd_call_log_icon_outgoing">Outgoing call</string>
    <string name="cd_call_log_missed_calls">Missed calls</string>
    <string name="cd_message_emoticon">Add emoticon</string>
    <string name="cd_message_locked">Message locked</string>
    <string name="cd_message_send">Send message</string>
    <string name="cd_message_status">Message status</string>
    <string name="cd_whitelist_allowed_checkbox">Enabled</string>
    <string name="cd_whitelist_connected">Connected</string>
    <string name="message_audio_button">Audio</string>
    <string name="message_contact_button">Contact</string>
    <string name="message_emoticon_button">Emoticon</string>
    <string name="message_files_button">Files</string>
    <string name="message_image_button">Picture</string>
    <string name="message_location_button">Location</string>
    <string name="message_templates_button">Templates</string>
    <string name="message_text_hint">This is a message. http://www.example.com</string>
    <string name="message_time_hint">hh:mm</string>
    <string name="message_video_button">Video</string>
    <string name="messages_text_hint">Message text</string>
    <string name="permission_dialog_all_message">You must allow all permissions to be able to use this App.</string>
    <string name="permission_dialog_read_more">Read more</string>
    <string name="permission_dialog_settings">Settings</string>
    <string name="preference_whitelist_ssid">SSID</string>
</resources>