<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent" android:isScrollContainer="true">
        <Button android:id="@+id/attach_emoticon_button" android:text="@string/message_emoticon_button" android:drawableTop="@drawable/ic_bar_emoticons" style="@style/Button.Light.MessageAttach"/>
        <Button android:id="@+id/attach_template_button" android:text="@string/message_templates_button" android:drawableTop="@drawable/ic_bar_templates" style="@style/Button.Light.MessageAttach"/>
        <Button android:id="@+id/attach_image_button" android:text="@string/message_image_button" android:drawableTop="@drawable/ic_bar_picture" style="@style/Button.Light.MessageAttach"/>
        <Button android:id="@+id/attach_audio_button" android:text="@string/message_audio_button" android:drawableTop="@drawable/ic_bar_audio" style="@style/Button.Light.MessageAttach"/>
        <Button android:id="@+id/attach_video_button" android:text="@string/message_video_button" android:drawableTop="@drawable/ic_bar_video" style="@style/Button.Light.MessageAttach"/>
        <Button android:id="@+id/attach_location_button" android:text="@string/message_location_button" android:drawableTop="@drawable/ic_bar_map_small" style="@style/Button.Light.MessageAttach"/>
        <Button android:id="@+id/attach_file_button" android:text="@string/message_files_button" android:drawableTop="@drawable/ic_bar_files" style="@style/Button.Light.MessageAttach"/>
        <Button android:id="@+id/attach_contact_button" android:text="@string/message_contact_button" android:drawableTop="@drawable/ic_bar_contact" style="@style/Button.Light.MessageAttach"/>
    </LinearLayout>
</HorizontalScrollView>
