<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:padding="5dp" style="@style/Layout.Fill">
    <ImageView android:id="@+id/callTypeIcon" android:layout_margin="10dp" android:src="@drawable/ic_call_outgoing" android:layout_centerVertical="true" android:contentDescription="@string/cd_call_log_icon_outgoing" style="@style/Layout.Wrap"/>
    <RelativeLayout android:id="@+id/contact_info" android:layout_marginRight="10dp" android:layout_toRightOf="@id/callTypeIcon" android:layout_centerVertical="true" style="@style/Layout.WrapHeight">
        <TextView android:id="@+id/callDetailCallTime" android:text="@string/call_details_time_hint" style="@style/ListItemTitleStyle"/>
        <TextView android:id="@+id/callDetailDuration" android:text="@string/call_details_duration_hint" android:layout_below="@id/callDetailCallTime" style="@style/ListItemSubTitleStyle"/>
    </RelativeLayout>
    <com.mavenir.android.view.DontPressWithParentImageView android:id="@+id/play_button" android:visibility="gone" android:layout_margin="10dp" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:contentDescription="@string/cd_call_details_play" style="@style/ListItemActionStyle"/>
</RelativeLayout>
