<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:gravity="center_vertical" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/permissionTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:text="@string/permission_dialog_all_message"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:linksClickable="true" android:id="@+id/readMoreTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:layout_marginRight="20dp" android:text="@string/permission_dialog_read_more"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:linksClickable="true" android:id="@+id/settingsTextView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="10dp" android:layout_marginRight="20dp" android:text="@string/permission_dialog_settings"/>
    <ImageView android:layout_gravity="center" android:id="@+id/appLogoImageView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp" android:src="@drawable/logo_splash" android:contentDescription="@string/cd_activation_logo"/>
</LinearLayout>
