<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:gravity="center" android:orientation="horizontal" android:background="@color/black_tele2" android:paddingLeft="5dp" android:paddingTop="5dp" android:paddingRight="@dimen/scrollview_padding_right" android:paddingBottom="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/connectedIcon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_whitelist_connected" android:contentDescription="@string/cd_whitelist_connected"/>
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/white" android:id="@+id/ssidTextView" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:layout_marginRight="10dp" android:text="@string/preference_whitelist_ssid" android:layout_weight="1"/>
    <CheckBox android:id="@+id/allowedCheckBox" android:background="@drawable/btn_checkbox" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:button="@null" android:contentDescription="@string/cd_whitelist_allowed_checkbox"/>
</LinearLayout>
