<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:gravity="end" android:orientation="vertical" android:id="@+id/message_box" android:layout_width="match_parent" android:layout_height="wrap_content">
    <include android:id="@+id/message_section_header" layout="@layout/message_section_header"/>
    <LinearLayout android:gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/message_body" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:gravity="end" android:orientation="vertical" android:id="@+id/message_indicators" android:paddingLeft="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="60dp">
            <ImageView android:id="@+id/message_lock_indicator" android:paddingBottom="5dp" android:src="@drawable/ic_lock" android:contentDescription="@string/cd_message_locked" style="@style/Layout.Wrap"/>
            <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@color/gray" android:id="@+id/message_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_time_hint"/>
        </LinearLayout>
        <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
            <com.mavenir.android.common.BubbleFrameLayout android:id="@+id/message_content" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="18dp" android:paddingBottom="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginBottom="10dp" custom:bubbleColor="@color/message_bubble_sent" custom:bubbleCornerRadius="6dp" custom:bubbleArrowType="standard" custom:bubbleArrowWidth="8dp" custom:bubbleArrowHeight="16dp" custom:bubbleArrowPosition="right" custom:bubbleArrowAlign="center">
                <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="@color/message_bubble_sent_text" android:textColorLink="@color/white" android:autoLink="all" android:id="@+id/message_text" android:background="@drawable/message_bubble_right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/message_text_hint"/>
            </com.mavenir.android.common.BubbleFrameLayout>
            <ImageView android:id="@+id/message_status" android:layout_width="20dp" android:layout_height="20dp" android:layout_marginLeft="-10dp" android:layout_marginBottom="-10dp" android:src="@drawable/ic_message_success" android:layout_alignLeft="@id/message_content" android:layout_alignBottom="@id/message_content" android:contentDescription="@string/cd_message_status"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
