<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res-auto" android:orientation="horizontal" android:id="@+id/search_bar" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:textColor="?android:attr/textColorPrimary" android:gravity="center_vertical" android:id="@+id/search_badge" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginBottom="2dp" android:drawablePadding="0dp"/>
    <ImageView android:layout_gravity="center_vertical" android:id="@+id/search_button" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewSearchIcon" android:contentDescription="@string/abc_searchview_description_search" style="?attr/actionButtonStyle"/>
    <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/search_edit_frame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="4dp" android:layout_marginRight="8dp" android:layout_marginBottom="4dp" android:layout_weight="1">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/search_mag_icon" android:visibility="gone" android:layout_width="@d/abc_dropdownitem_icon_width" android:layout_height="wrap_content" android:layout_marginLeft="@d/abc_dropdownitem_text_padding_left" android:src="?attr/searchViewSearchIcon" android:scaleType="centerInside"/>
        <LinearLayout android:layout_gravity="center_vertical" android:orientation="horizontal" android:id="@+id/search_plate" android:background="?attr/searchViewTextField" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1">
            <view android:ellipsize="end" android:layout_gravity="bottom" android:id="@+id/search_src_text" android:background="@null" android:paddingLeft="@d/abc_dropdownitem_text_padding_left" android:paddingRight="@d/abc_dropdownitem_text_padding_right" android:layout_width="0dp" android:layout_height="36dp" android:minWidth="@d/abc_search_view_text_min_width" android:singleLine="true" android:layout_weight="1" android:inputType="none|text|textAutoComplete|textNoSuggestions" android:dropDownAnchor="@+id/search_edit_frame" android:imeOptions="actionSearch" android:contentDescription="@string/abc_searchview_description_query" android:dropDownHeight="wrap_content" android:dropDownHorizontalOffset="0dp" android:dropDownVerticalOffset="0dp" class="android.support.v7.widget.SearchView$SearchAutoComplete" style="?attr/searchViewAutoCompleteTextView"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/search_close_btn" android:background="?attr/selectableItemBackground" android:paddingLeft="8dp" android:paddingRight="8dp" android:focusable="true" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewCloseIcon" android:contentDescription="@string/abc_searchview_description_clear"/>
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:id="@+id/submit_area" android:background="?attr/searchViewTextFieldRight" android:layout_width="wrap_content" android:layout_height="match_parent">
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/search_go_btn" android:background="?attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewGoIcon" android:contentDescription="@string/abc_searchview_description_submit"/>
            <ImageView android:layout_gravity="center_vertical" android:id="@+id/search_voice_btn" android:background="?attr/selectableItemBackground" android:paddingLeft="16dp" android:paddingRight="16dp" android:focusable="true" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="match_parent" android:src="?attr/searchViewVoiceIcon" android:contentDescription="@string/abc_searchview_description_voice"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
